Kubernetes/ingress/ingress-resource-websocket.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-websocket
  labels:
    ingress: fullstack-websocket
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/proxy-read-timeout: "3600"
    kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: notification-service
    kubernetes.io/server-snippets: |
      location /websocket {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }

spec:
  rules:
  - http:
      paths:
        - path: /websocket/
          pathType: Prefix
          backend:
            service:
              name: notification-service
              port:
                number: 8080
